--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -302,6 +302,12 @@ hr {
   text-align: center;
 }
 
+.timeline-container{
+  max-width: 900px;
+  margin: 40px auto 0;
+  padding: 0 20px;  
+}
+
 .intro-label {
   text-transform: uppercase;
   font-size: 1.85rem;
